[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-research-tools"
version = "0.1.0"
description = "Cryptocurrency research tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
